# vectorfuse

./: .gitignore  LICENSE  README.md
docs/: adding-backends.md  architecture.md
python/: README.md  pyproject.toml
python/src/vectorfuse/: __init__.py  client.py  exceptions.py  models.py
python/src/vectorfuse/backends/: __init__.py  base.py  milvus.py
python/tests/: test_core.py
typescript/: README.md  package.json  tsconfig.json
typescript/src/: client.ts  exceptions.ts  index.ts  models.ts
typescript/src/backends/: base.ts  milvus.ts
typescript/tests/: core.test.ts
